objects/Training_Event_Product__c.object
<CustomObject>
    <description>This is a junction object for many to many relationship between training event and product.</description>
    <fields>
        <fullName>LCRM_Material_Number__c</fullName>
        <formula>LCRM_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Level_2__c</fullName>
        <formula>LCRM_Product__r.Product_Level_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Level_3__c</fullName>
        <formula>LCRM_Product__r.Product_Level_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Level 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Level_4__c</fullName>
        <formula>LCRM_Product__r.Product_Level_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Level 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Type__c</fullName>
        <formula>LCRM_Product__r.LCRM_Product_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Removed previous UKI filter criteria  and added Product.LCRM_Logged_In_User__c as part of JIRA Story#13421  for filtering out the products based on user&apos;s Sub Bu.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Event_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Training_Event__c</fullName>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Training Event Products</relationshipLabel>
        <relationshipName>Training_Event_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Training Event Product</label>
    <nameField>
        <displayFormat>TEP – {00000}</displayFormat>
        <label>Training Event Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Event Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>